# ai_voice_assistant

./: .gitignore  README.md  pyproject.toml  whatsapp_voice_bot.py
backend/: Dockerfile  agent.py  local_mcp_server.py  observability.py  pyproject.toml  server.py  sip_call.py
frontend/: app.js  index.html  styles.css
